@@ -1,3 +1,8 @@
+2003-04-15  Kevin Kenny  <kennykb@acm.org>
+	
+	* win/tclWinTime.c: Corrected use of types to make compilation
+	compatible with VC++5.
+
 2003-04-14  Kevin Kenny  <kennykb@acm.org>
 
 	* win/tclWinFile.c: added conditionals to restore compilation on
